# time-tracker

./: Cargo.toml  README.md  lockfile
src/: error.rs  init.rs
src/feature/: cli.rs  report_fmt.rs  tracker.rs
src/feature/tracker/: flatfile.rs  reporter.rs
tests/: cli.rs
