[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "=1.0.64"
clap = { version = "=4.5.20", features = ["derive", "env"] }
clap-verbosity-flag = "=2.2.2"
error-stack = "=0.5.0"
owo-colors = "=4.1.0"
tracing = "=0.1.40"
tracing-error = "=0.2.0"
tracing-log = "=0.2.0"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = { version = "=2.0.16", features = ["color-auto"] }
assert_fs = { version = "=1.1.2", features = ["color-auto"] }
pretty_assertions = "=1.4.1"
testresult = "=0.4.1"
